infrastructure/configs/actual/actual-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-ingress
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - actual.yuandrk.net
    secretName: actual-ingress-prod
  rules:
  - host: actual.yuandrk.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actualbudget
            port:
              number: 5006
